--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
         <div class="about-containers">
           <div class="details-container">
             <h2 class="experience-sub-title">Frontend Development</h2>
-            <div class="article-container">
+            <div class="article-container toleft">
               <article>
                 <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
                 <div>
@@ -266,7 +266,7 @@
           </div>
           <div class="details-container">
             <h2 class="experience-sub-title">Backend Development</h2>
-            <div class="article-container">
+            <div class="article-container toleft">
               <article>
                 <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
                 <div>
